--- a/src/index.css
+++ b/src/index.css
@@ -530,7 +530,7 @@ body {
     width: 0;
   }
   to {
-    width: 30%;
+    width: 100%;
   }
 }
 
@@ -1162,6 +1162,10 @@ body {
 }
 
 @media (max-width: 1100px) {
+  .focusMode-center-quote {
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
   .flex-tips-and-timer {
     flex-direction: column;
   }
