--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,18 @@ body {
   background-color: #121212;
 }
 
+/* Прибирає стрілочки в Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Прибирає стрілки в Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .flexBox {
   background-color: #1f1f1f;
   border-radius: 12px;
