--- a/src/index.css
+++ b/src/index.css
@@ -513,19 +513,18 @@ input[type="number"] {
   margin: 2rem auto;
 }
 
-/* Typewriter */
+/* Typewriter - оновлений */
 
 .focusMode-center-quote {
-  position: absolute;
-  /* top: 50%;
-  left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  font-size: 1.8rem;
+  position: relative; /* щоб не лізло за межі контейнера */
+  font-size: clamp(1.2rem, 2vw, 2rem); /* адаптивний розмір для всіх екранів */
   font-weight: 600;
   color: #eaeaea;
   text-align: center;
-  width: 80%;
-  line-height: 1.4;
+  width: 90%;
+  max-width: 700px;
+  margin: 0 auto;
+  line-height: 1.5;
   letter-spacing: 0.5px;
 }
 
@@ -533,8 +532,8 @@ input[type="number"] {
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
-  /* border-right: 2px solid #58c4dc; */
-  animation: typing 6s steps(80, end), blink 0.75s step-end infinite;
+  /* border-right: 2px solid #58c4dc; класичний курсор */
+  animation: typing 4s steps(40, end), blink 0.75s step-end infinite;
 }
 
 @keyframes typing {
@@ -546,11 +545,15 @@ input[type="number"] {
   }
 }
 
-/* @keyframes blink {
-  50% {
+@keyframes blink {
+  0%,
+  100% {
     border-color: transparent;
   }
-} */
+  50% {
+    border-color: #58c4dc;
+  }
+}
 
 /* in case if unactivated -> */
 .focusMode-center-quote-activated {
